# proyecto-equipo-4

./: .gitignore  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  CMakeLists.txt  ChainHash.cpp  ChainHash.h  CircularArray.h  ForwardList.h  Index.h  List.h  MOCK_DATA_DEMO.csv  README.md  Register.cpp  Register.h  data.csv  heap.h  main.cpp  registers.csv  sha256.cpp  sha256.h
AVL/: avl.h  node.h
Blockchain/: Blockchain.qmlproject  CMakeLists.txt  qmlmodules
Btree/: btree.h  nodeb.h
Dynamic/: Dynamic.pro  dialog.cpp  dialog.h  dialog.ui  loadfile.cpp  loadfile.h  loadfile.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  window.cpp  window.h
Dynamicvv/: Dynamic.pro  main.cpp  searcher.cpp  searcher.h  searcher.ui  updater.cpp  updater.h  updater.ui
ForwardList/: ForwardList.h  List.h  Node.h
Heap/: heap.h
Vector/: CircularArray.h  queue.h
build-Dynamic-Desktop_Qt_6_4_0_GCC_64bit-Debug/: Dynamic  moc_copypaste.cpp  moc_copypastecell.cpp  moc_dialog.cpp  moc_inicio.cpp  moc_loadfile.cpp  moc_tabnew.cpp  moc_window.cpp  ui_copypaste.h  ui_copypastecell.h  ui_dialog.h  ui_generar.h  ui_inicio.h  ui_loadfile.h  ui_mainwindow.h  ui_tabnew.h
build-Dynamic-Desktop_Qt_6_4_0_MinGW_64_bit-Debugvv/: Dynamic  Makefile  Makefile.Debug  Makefile.Release  data.csv  example.csv  moc_copypaste.cpp  moc_generar.cpp  moc_inicio.cpp  moc_loadfile.cpp  moc_searcher.cpp  moc_tabnew.cpp  ui_copypaste.h  ui_copypastecell.h  ui_generar.h  ui_inicio.h  ui_loadfile.h  ui_searcher.h  ui_tabnew.h
build-q_Blockchain-Desktop_Qt_6_4_0_GCC_64bit-Debug/: moc_mainwindow.cpp  (+7 more)
(+616 files in other folders)
